# ai-analytics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
data/sample/: business_sales_demo.csv  iris_small.csv
notebooks/: sample_analysis.ipynb
src/ai_analytics/: __init__.py  __main__.py  business_price_bucket_demo.py  business_price_regression_demo.py  business_price_regression_plot.py  dashboard.py  data_loader.py  model.py  pipeline.py
tests/: test_pipeline.py
