[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
(
  \.venv
)
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  "B",
  "I",
  "UP",
  "C4",
  "SIM",
  "NPY",
  "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
