[metadata]
name = ai-analytics
version = 0.1.0
description = Sample analytics pipeline on tabular data
author = mustafa-alpay

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.11
include_package_data = True
install_requires =
    pandas>=2.1,<3.0
    numpy>=1.26,<2.0
    scikit-learn>=1.4,<2.0

[options.packages.find]
where = src
